<resources>
    <string name="app_name">MEDICATORIO</string>
    <string name="lbl_user">Usuario</string>
    <string name="lbl_password">Clave</string>
    <string name="lbl_checkboxText">Mantener iniciada la sesión</string>
    <string name="btn_accept">Aceptar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_food">Cuidados: Alimentación</string>
    <string name="lbl_environment">Cuidados: Ambiente</string>

    <string name="lbl_medicamento">Nombre del medicamento</string>
    <string name="lbl_type">Presentación:</string>
    <string name="lbl_dosis">Dosis</string>
    <string name="title_activity_maps_fragment">Map</string>
    <string name="lbl_sede1">Sede Lima: \n Dirección: Av. Inca Garcilaso de la Vega 1420
                                        \n Teléfono: 358-0100</string>
    <string name="lbl_sede2">Sede San Borja: \n Dirección: Av. Guardia Civil 421 - 433
                                            \n Teléfono: 412-4607</string>
</resources>
